--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
-    <h1>A heading 1</h1>
+    <h1>A heading 1</h1><br><strong><em>This is after H1</em></strong>
     <h2>A heading 2</h2>
+    <h3>A heading 3</h3>
     <p>A paragraph</p>
+    <p>Pharagraph 2</p>
+    paragraph 4
 </body>
 </html>
 
