--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <h3>A heading 3</h3>
     <p>A paragraph</p>
     <p>Pharagraph 2</p>
-    paragraph 4
+    <a href="contact.html">Contact Us</a>
+    
+    <a href="index.html">Home</a>
 </body>
 </html>
 
