--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <a href="contact.html">Contact Us</a>
     
     <a href="index.html">Home</a>
+    <a href="http://www.naz.edu" target="_blank">Register Here!</a>
+    
+    <a href="css/styles.css">css-styles</a>
 </body>
 </html>
-
+<a href="https://naz.mrooms3.net" target="_blank">moodle</a> 
