--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="utf-8">
     <title>My Title</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+    
 </head>
 <body>
     <h1>A heading 1</h1><br><strong><em>This is after H1</em></strong>
-    <h2>A heading 2</h2>
+    <h2 style="color : cornflowerblue;">A heading 2</h2>
     <h3>A heading 3</h3>
-    <p>A paragraph</p>
+    <p style="color : aquamarine">A paragraph</p>
     <p>Pharagraph 2</p>
     <a href="contact.html">Contact Us</a>
     
@@ -19,4 +20,4 @@
     <a href="css/styles.css">css-styles</a>
 </body>
 </html>
-<a href="https://naz.mrooms3.net" target="_blank">moodle</a> 
+<a href="https://naz.mrooms3.net" target="_blank">moodle</a>  
