--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1 class="cis-260">A heading 1</h1><br><strong><em>This is after H1</em></strong>
     <h2 style="color : cornflowerblue;">A heading 2</h2>
     <h3 class="cis-260">A heading 3</h3>
-    <p style="color : aquamarine">A paragraph</p>
+    <p style="color : #FF0000">A paragraph</p>
     <p>Pharagraph 2</p>
     <a class="link" href="http://www.google.com" target="_blank" style="color: aqua">Google</a>
     
