--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <h2 style="color : cornflowerblue;">A heading 2</h2>
     <h3 class="cis-260">A heading 3</h3>
     <p style="color : #FF0000">A paragraph</p>
-    <p>Pharagraph 2</p>
+    <p id="special-paragraph">Pharagraph 2</p>
+    <p style="color: aqua">Text with a Link to <a href="http://naz.edu" target="_blank">naz.edu</a></p>
     <a class="link" href="http://www.google.com" target="_blank" style="color: aqua">Google</a>
     
        
